--- a/chromium/Dockerfile
+++ b/chromium/Dockerfile
@@ -19,7 +19,7 @@
 
 # Base docker image
 FROM debian:sid-slim
-LABEL maintainer "Jessie Frazelle <jess@linux.com>"
+LABEL maintainer "Robert Szynal <rjszynal@gmail.com>"
 
 # Install Chromium
 RUN apt-get update && apt-get install -y \
