--- a/chrome/stable/Dockerfile
+++ b/chrome/stable/Dockerfile
@@ -1,19 +1,31 @@
 # Run Chrome in a container
 #
-# docker run -it \
-#	--net host \ # may as well YOLO
-#	--cpuset-cpus 0 \ # control the cpu
-#	--memory 512mb \ # max memory it can use
-#	-v /tmp/.X11-unix:/tmp/.X11-unix \ # mount the X11 socket
-#	-e DISPLAY=unix$DISPLAY \
-#	-v $HOME/Downloads:/home/chrome/Downloads \
-#	-v $HOME/.config/google-chrome/:/data \ # if you want to save state
-#	--security-opt seccomp=$HOME/chrome.json \
-#	--device /dev/snd \ # so we have sound
-#   --device /dev/dri \
-#	-v /dev/shm:/dev/shm \
-#	--name chrome \
-#	jess/chrome
+# if [ ! -f ${HOME}/seccomp/chrome.json ]; then
+# 	mkdir -p ${HOME}/seccomp
+# 	wget https://raw.githubusercontent.com/jfrazelle/dotfiles/master/etc/docker/seccomp/chrome.json -O ${HOME}/seccomp/chrome.json
+# fi
+# docker run --rm -d \
+# 	--cpuset-cpus 0 \
+# 	--memory 3gb \
+# 	--shm-size 2g \
+# 	--device /dev/dri \
+# 	--device /dev/usb \
+# 	--device /dev/bus/usb \
+# 	-v /tmp/.X11-unix:/tmp/.X11-unix \
+# 	-e DISPLAY \
+# 	-e GDK_SCALE \
+# 	-e GDK_DPI_SCALE \
+# 	-v /etc/localtime:/etc/localtime:ro \
+# 	-v "/etc/hosts:/etc/hosts:ro"
+# 	--security-opt seccomp:${HOME}/seccomp/chrome.json
+# 	-v ${HOME}/.chrome/cache:/home/chrome/.cache
+# 	-v ${HOME}/.chrome/config:/home/chrome/.config
+# 	-v ${HOME}/.chrome/pki:/home/chrome/.pki
+# 	-v ${HOME}/.chrome/local:/home/chrome/.local
+# 	-v ${HOME}/.chrome/gnome:/home/chrome/.gnome
+# 	--name chrome \
+# 	rjszynal/chrome \
+# 		--user-data-dir="/home/chrome/.config/google-chrome"
 #
 # You will want the custom seccomp profile:
 # 	wget https://raw.githubusercontent.com/jfrazelle/dotfiles/master/etc/docker/seccomp/chrome.json -O ~/chrome.json
@@ -24,38 +36,36 @@ LABEL maintainer "Robert Szynal <rjszynal@gmail.com>"
 
 # Install Chrome
 RUN apt-get update && apt-get install -y \
-	apt-transport-https \
-	ca-certificates \
-	curl \
-	gnupg \
-	hicolor-icon-theme \
-	libcanberra-gtk* \
-	libgl1-mesa-dri \
-	libgl1-mesa-glx \
-	libpango1.0-0 \
-	libpulse0 \
-	libv4l-0 \
-	fonts-symbola \
+		apt-transport-https \
+		ca-certificates \
+		curl \
+		gnupg \
+		hicolor-icon-theme \
+		libcanberra-gtk* \
+		libgl1-mesa-dri \
+		libgl1-mesa-glx \
+		libpango1.0-0 \
+		libpulse0 \
+		libv4l-0 \
+		fonts-symbola \
 	--no-install-recommends \
 	&& curl -sSL https://dl.google.com/linux/linux_signing_key.pub | apt-key add - \
 	&& echo "deb [arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list \
 	&& apt-get update && apt-get install -y \
-	google-chrome-stable \
+		google-chrome-stable \
 	--no-install-recommends \
 	&& apt-get purge --auto-remove -y curl \
 	&& rm -rf /var/lib/apt/lists/*
 
 # Download the google-talkplugin
-RUN set -x \
-	&& apt-get update \
-	&& apt-get install -y --no-install-recommends \
-		ca-certificates \
+RUN apt-get update && apt-get install -y \
 		curl \
-	&& rm -rf /var/lib/apt/lists/* \
+	--no-install-recommends \
 	&& curl -sSL "https://dl.google.com/linux/direct/google-talkplugin_current_amd64.deb" -o /tmp/google-talkplugin-amd64.deb \
 	&& dpkg -i /tmp/google-talkplugin-amd64.deb \
 	&& rm -rf /tmp/*.deb \
-	&& apt-get purge -y --auto-remove curl
+	&& apt-get purge -y --auto-remove curl \
+	&& rm -rf /var/lib/apt/lists/*
 
 # Add chrome user
 RUN groupadd -r chrome && useradd -r -g chrome -G audio,video chrome \
