--- a/firefox/Dockerfile
+++ b/firefox/Dockerfile
@@ -1,39 +1,39 @@
+# Run Firefox in a container
+#
+# docker run --rm -d \
+# 	--cpuset-cpus 0 \
+# 	--memory 3gb \
+# 	--shm-size 2g \
+# 	--device /dev/dri \
+# 	--device /dev/usb \
+# 	--device /dev/bus/usb \
+# 	-v /tmp/.X11-unix:/tmp/.X11-unix \
+# 	-e DISPLAY \
+# 	-e GDK_SCALE \
+# 	-e GDK_DPI_SCALE \
+# 	-v /etc/localtime:/etc/localtime:ro \
+# 	-v "/etc/hosts:/etc/hosts:ro" \
+# 	-v ${HOME}/.firefox/cache:/home/firefox/.cache \
+# 	-v ${HOME}/.firefox/mozilla:/home/firefox/.mozilla \
+# 	-v ${HOME}/Downloads:/home/firefox/Downloads \
+# 	--name firefox \
+# 	rjszynal/firefox
+
 FROM debian:sid-slim
 LABEL maintainer "Robert Szynal <rjszynal@gmail.com>"
 
 RUN apt-get update && apt-get install -y \
-		dirmngr \
-		gnupg \
-	--no-install-recommends \
-	&& apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 0AB215679C571D1C8325275B9BDB3D89CE49EC21 \
-	&& echo "deb http://ppa.launchpad.net/mozillateam/firefox-next/ubuntu xenial main" >> /etc/apt/sources.list.d/firefox.list \
-	&& apt-get update && apt-get install -y \
-		apulse \
 		ca-certificates \
 		ffmpeg \
 		firefox \
 		hicolor-icon-theme \
-		libasound2 \
-		libgl1-mesa-dri \
-		libgl1-mesa-glx \
-		libpulse0 \
-		fonts-noto \
-		fonts-noto-cjk \
-		fonts-noto-color-emoji \
+		libcanberra-gtk3-module \
 	--no-install-recommends \
 	&& rm -rf /var/lib/apt/lists/*
 
-ENV LANG en-GB.utf8
-
-COPY local.conf /etc/fonts/local.conf
-
-RUN echo 'pref("browser.tabs.remote.autostart", false);' >> /etc/firefox/syspref.js
-
 # Add firefox user
-RUN groupadd firefox \
-	&& useradd -g firefox -G audio,video firefox \
-	&& mkdir -p /home/firefox/Downloads \
-	&& chown -R firefox:firefox /home/firefox
+RUN groupadd -r firefox && useradd -r -g firefox -G audio,video firefox \
+	&& mkdir -p /home/firefox/Downloads && chown -R firefox:firefox /home/firefox
 
 # Run as non privileged user
 USER firefox
