Updated flexget to use non-root user

--- a/flexget/Dockerfile
+++ b/flexget/Dockerfile
@@ -1,15 +1,24 @@
 # Flexget
 #
-# */30 * * * * docker run --rm -v [LOCAL_CONFIG_LOCATION]:/root/.flexget --link transmission:transmission rjszynal/flexget
+# */30 * * * * docker run --rm -v [LOCAL_CONFIG_LOCATION]:/home/flexget/.flexget --net container:transmission rjszynal/flexget
 
 FROM python:3.7-alpine3.9
 LABEL maintainer "Robert Szynal <rjszynal@gmail.com>"
 
 RUN pip install --upgrade pip \
-	&& pip install -I flexget transmissionrpc \
-	&& mkdir -p /root/.flexget \
-	&& touch /root/.flexget/config.yml
+	&& pip install -I flexget transmissionrpc
 
-VOLUME ["/root/.flexget"]
+RUN addgroup -g 1000 -S flexget \
+	&& adduser -SDG flexget -u 1000 -h /home/flexget flexget \
+	&& mkdir -p /home/flexget/.flexget \
+	&& chown flexget:flexget /home/flexget/.flexget
 
-CMD ["/usr/local/bin/flexget", "--loglevel", "info", "--cron", "execute"]
+ENV HOME /home/flexget
+WORKDIR /home/flexget
+USER flexget
+
+VOLUME ["/home/flexget"]
+
+ENTRYPOINT ["/usr/local/bin/flexget"]
+
+CMD ["--loglevel", "info", "--cron", "execute"]
