--- a/hollywood/Dockerfile
+++ b/hollywood/Dockerfile
@@ -8,7 +8,16 @@ LABEL maintainer "Robert Szynal <rjszynal@gmail.com>"
 
 # Install hollywood
 RUN apt-get update && apt-get install -y \
+		apg \
+		bmon \
+		bsdmainutils \
+		ccze \
+		cmatrix \
 		hollywood \
+		htop \
+		mlocate \
+		moreutils \
+		tree \
 	--no-install-recommends \
 	&& rm -rf /var/lib/apt/lists/*
 
@@ -19,4 +28,4 @@ RUN groupadd -r hollywood && useradd -r -g hollywood -G audio,video hollywood \
 # Run as non privileged user
 USER hollywood
 
-ENTRYPOINT [ "hollywood" ]
+ENTRYPOINT [ "/usr/games/hollywood" ]
