--- a/chrome/beta/Dockerfile
+++ b/chrome/beta/Dockerfile
@@ -50,7 +50,7 @@ RUN apt-get update && apt-get install -y \
 		fonts-symbola \
 	--no-install-recommends \
 	&& curl -sSL https://dl.google.com/linux/linux_signing_key.pub | apt-key add - \
-	&& echo "deb [arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list \
+	&& echo "deb [arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome-beta.list \
 	&& apt-get update && apt-get install -y \
 		google-chrome-beta \
 	--no-install-recommends \
