Changed from system user to normal user

--- a/chrome/beta/Dockerfile
+++ b/chrome/beta/Dockerfile
@@ -68,8 +68,7 @@ RUN apt-get update && apt-get install -y \
 	&& rm -rf /var/lib/apt/lists/*
 
 # Add chrome user
-RUN groupadd -r chrome && useradd -r -g chrome -G audio,video chrome \
-    && mkdir -p /home/chrome/Downloads && chown -R chrome:chrome /home/chrome
+RUN useradd -m -G audio,video chrome
 
 COPY local.conf /etc/fonts/local.conf
 
