--- a/audacity/Dockerfile
+++ b/audacity/Dockerfile
@@ -7,8 +7,7 @@ RUN apt-get update && apt-get install -y \
 	&& rm -rf /var/lib/apt/lists/*
 
 # Add Audacity user
-RUN groupadd -r audacity && useradd -r -g audacity -G audio,video audacity \
-	&& mkdir -p /home/audacity && chown -R audacity:audacity /home/audacity
+RUN useradd -m -G audio,video audacity
 
 # Run as non privileged user
 USER audacity
