--- a/st/Dockerfile
+++ b/st/Dockerfile
@@ -2,7 +2,7 @@
 #
 # docker run -d \
 #		-v /tmp/.X11-unix:/tmp/.X11-unix \
-#		-v $HOME/.config/st:/root/.config/st \
+#		-v $HOME/.st/config:/home/st/.config/st \
 #		-e DISPLAY \
 #		--name st \
 #		rjszynal/st
@@ -17,8 +17,7 @@ RUN apt-get update && apt-get install -y \
 
 # Add st user
 ARG username=st
-RUN groupadd ${username} \
-	&& useradd -g ${username} -G audio,video ${username}
+RUN useradd -m -G audio,video ${username}
 
 # Run as non privileged user
 USER ${username}
