Update Flexget and change to Debian. Enable flexget in makefile and fix version build

--- a/flexget/Dockerfile
+++ b/flexget/Dockerfile
@@ -2,20 +2,22 @@
 #
 # */30 * * * * docker run --rm -v [LOCAL_CONFIG_LOCATION]:/home/flexget/.flexget --net container:transmission rjszynal/flexget
 
-FROM python:3.7-alpine3.9
+FROM python:3-slim
 LABEL maintainer "Robert Szynal <rjszynal@gmail.com>"
 
 RUN pip install --upgrade pip \
 	&& pip install -I flexget transmissionrpc
 
-RUN addgroup -g 1000 -S flexget \
-	&& adduser -SDG flexget -u 1000 -h /home/flexget flexget \
+# Add Spotify user
+RUN groupadd -g 1000 flexget \
+	&& useradd -mg flexget -u 1000 flexget \
 	&& mkdir -p /home/flexget/.flexget \
 	&& chown flexget:flexget /home/flexget/.flexget
 
-ENV HOME /home/flexget
-WORKDIR /home/flexget
+# Run as non privileged user
 USER flexget
+
+WORKDIR /home/flexget
 
 VOLUME ["/home/flexget"]
 
