--- a/chromium/Dockerfile
+++ b/chromium/Dockerfile
@@ -57,6 +57,7 @@ RUN apt-get update && apt-get install -y \
 		ca-certificates \
 		curl \
 		libpango-1.0-0 \
+		libgdk-pixbuf2.0-0 \
 	--no-install-recommends \
 	&& curl -sSL "https://dl.google.com/linux/direct/google-talkplugin_current_amd64.deb" -o /tmp/google-talkplugin-amd64.deb \
 	&& dpkg-deb -x /tmp/google-talkplugin-amd64.deb /tmp/google-talkplugin-amd64 \
