--- a/firefox/Dockerfile
+++ b/firefox/Dockerfile
@@ -19,16 +19,27 @@
 #     --name firefox \
 #     rjszynal/firefox
 
-FROM debian:sid-slim
+FROM debian:stable-slim
 LABEL maintainer "Robert Szynal <rjszynal@gmail.com>"
+
+ENV DEBIAN_FRONTEND="noninteractive"
 
 RUN apt-get update && apt-get install -y \
         ca-certificates \
-        ffmpeg \
-        firefox \
-        hicolor-icon-theme \
-        libcanberra-gtk3-module \
     --no-install-recommends \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN buildDeps=' \
+        curl \
+        gnupg2\
+    ' \
+    && apt-get update && apt-get install -y ${buildDeps} --no-install-recommends \
+        && curl -sSL https://packages.mozilla.org/apt/repo-signing-key.gpg | gpg --dearmor --yes -o /etc/apt/trusted.gpg.d/mozilla.gpg \
+    && echo "deb [signed-by=/etc/apt/trusted.gpg.d/mozilla.gpg] https://packages.mozilla.org/apt mozilla main" > /etc/apt/sources.list.d/mozilla.list \
+    && apt-get update && apt-get install -y \
+        firefox \
+    --no-install-recommends \
+    && apt-get purge -y --auto-remove ${buildDeps} \
     && rm -rf /var/lib/apt/lists/*
 
 # Add firefox user
