--- a/gimp/Dockerfile
+++ b/gimp/Dockerfile
@@ -8,7 +8,7 @@
 #     --name gimp \
 #     rjszynal/gimp
 #
-FROM debian:sid-slim
+FROM debian:stable-slim
 LABEL maintainer "Robert Szynal <rjszynal@gmail.com>"
 
 RUN apt-get update && apt-get install -y \
