--- a/keepass2/Dockerfile
+++ b/keepass2/Dockerfile
@@ -18,7 +18,7 @@
 # (see: https://stackoverflow.com/questions/28392949/running-chromium-inside-docker-gtk-cannot-open-display-0)
 #
 
-FROM debian:sid-slim
+FROM debian:stable-slim
 LABEL maintainer "Christian Koep <christiankoep@gmail.com>"
 
 ENV DEBIAN_FRONTEND noninteractive
