--- a/signal-messenger-beta/Dockerfile
+++ b/signal-messenger-beta/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:sid-slim
+FROM debian:stable-slim
 LABEL maintainer "Robert Szynal <rjszynal@gmail.com>"
 
 RUN apt-get update && apt-get install -y \
