Update gpg key storing

--- a/chrome/Dockerfile
+++ b/chrome/Dockerfile
@@ -48,8 +48,9 @@ RUN apt-get update && apt-get install -y \
         libv4l-0 \
         fonts-symbola \
     --no-install-recommends \
-    && curl -sSL https://dl.google.com/linux/linux_signing_key.pub | apt-key add - \
-    && echo "deb [arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list \
+    && curl -sSL https://dl.google.com/linux/linux_signing_key.pub | gpg --dearmor --yes -o /usr/share/keyrings/google-chrome.gpg \
+    && echo "deb [signed-by=/usr/share/keyrings/google-chrome.gpg arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main" \
+        > /etc/apt/sources.list.d/google-chrome.list \
     && apt-get update && apt-get install -y \
         google-chrome-stable \
     --no-install-recommends \
