--- a/chrome-beta/Dockerfile
+++ b/chrome-beta/Dockerfile
@@ -32,7 +32,8 @@
 
 # Base docker image
 FROM debian:stable-slim
-LABEL maintainer "Robert Szynal <rjszynal@gmail.com>"
+LABEL maintainer.name="Robert Szynal" \
+      maintainer.email="rjszynal@gmail.com"
 
 # Install Chrome
 RUN apt-get update && apt-get install -y \
