--- a/htop/Dockerfile
+++ b/htop/Dockerfile
@@ -5,7 +5,8 @@
 #     rjszynal/htop
 
 FROM debian:stable-slim
-LABEL maintainer "Robert Szynal <rjszynal@gmail.com>"
+LABEL maintainer.name="Robert Szynal" \
+      maintainer.email="rjszynal@gmail.com"
 
 # Install htop
 RUN apt-get update && apt-get install -y \
