--- a/spotify-client/Dockerfile
+++ b/spotify-client/Dockerfile
@@ -1,5 +1,6 @@
 FROM debian:stable-slim
-LABEL maintainer "Robert Szynal <rjszynal@gmail.com>"
+LABEL maintainer.name="Robert Szynal" \
+      maintainer.email="rjszynal@gmail.com"
 
 ENV DEBIAN_FRONTEND="noninteractive"
 
